--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <h1>True Randomness Number Generator</h1>
     <h3>Powered by Random.org</h3>
     <script type="module" src="random.js"></script>
-    <input type="text" id="num-min"><br>
-    <input type="text" id="num-max"><br>
+    <input type="checkbox" id="check-box1"> อปร
+    <input type="checkbox" id="check-box2"> สธ
+    <input type="checkbox" id="check-box3"> ภูมิสิริ<br>
     <button id="gen-btn">Generate</button><br>
     Output = <span id="output"></span>
 </body>
