--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>True Randomness Number Generator</h1>
+    <h1>MDCU True Randomness Generator</h1>
     <h3>Powered by Random.org</h3>
     <script type="module" src="random.js"></script>
     <input type="checkbox" id="check-box1"> อปร
