--- a/index.html
+++ b/index.html
@@ -5,16 +5,21 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link href="index.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Prompt&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width" />
 </head>
 
 <body>
-    <div class="p-1 container">
-        <h1>MDCU True Randomness Generator</h1>
+    <div class="top-banner">
+        <h1 style="padding-top: 0.25em">MDCU True Randomness Generator</h1>
+    </div>
+    <div class="container">
         <script type="module" src="random.js"></script>
-        <ul class="p-1 list-group">
-            <div class="row checkbox-row justify-content-center">
-                <div class="col-6 col-md-4">
+        <div class="row checkbox-row justify-content-center">
+            <div class="col-8 col-md-4">
+                <ul class="p-1 list-group">
                     <li class="list-group-item">
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="check-box1">
@@ -71,20 +76,20 @@
                             </label>
                         </div>
                     </li>
-                </div>
+                </ul>
             </div>
-        </ul>
-        <div class="m-1 d-grid gap-2 col-6 col-md-4 mx-auto">
+        </div>
+        <div class="m-1 d-grid gap-2 col-8 col-md-4 mx-auto">
             <button class="btn btn-primary" type="button" id="gen-btn">Random!</button>
         </div>
         <div class="row justify-content-center">
-            <div class="m-1 alert alert-success col-6 col-md-4 justify-content-center" role="alert" id="output">
+            <div class="m-1 alert alert-success col-8 col-md-4 justify-content-center" role="alert" id="output">
                 Result
             </div>
+            <p style="color: gray">Powered by <a href="https://random.org">Random.org</a> & developed by Ken MCU78</p>
         </div>
-           <h6>Powered by Random.org</h6>
-    </div>
 
+    </div>
 </body>
 
 </html>
