--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div class="m-1 alert alert-success col-8 col-md-4 justify-content-center" role="alert" id="output">
                 Result
             </div>
-            <p style="color: gray">Powered by <a href="https://random.org">Random.org</a> & developed by Ken MCU78</p>
+            <p style="color: gray">Powered by <a href="https://random.org">Random.org</a> & developed by Ken MCDU78</p>
         </div>
 
     </div>
