Format code and add spam prevention

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 
 <head>
-    <!-- CSS only -->
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link href="index.css" rel="stylesheet">
@@ -18,8 +21,8 @@
     <div class="container">
         <script type="module" src="random.js"></script>
         <div class="row checkbox-row justify-content-center">
-            <div class="col-8 col-md-4">
-                <ul class="p-1 list-group">
+            <div class="col-8 col-sm-4">
+                <ul class="m-1 list-group">
                     <li class="list-group-item">
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="check-box1">
@@ -79,11 +82,11 @@
                 </ul>
             </div>
         </div>
-        <div class="m-1 d-grid gap-2 col-8 col-md-4 mx-auto">
+        <div class="m-1 d-grid gap-2 col-8 col-sm-4 mx-auto">
             <button class="btn btn-primary" type="button" id="gen-btn">Random!</button>
         </div>
         <div class="row justify-content-center">
-            <div class="m-1 alert alert-success col-8 col-md-4 justify-content-center" role="alert" id="output">
+            <div class="m-1 alert alert-success col-8 col-sm-4 mx-auto" role="alert" id="output">
                 Result
             </div>
             <p style="color: gray">Powered by <a href="https://random.org">Random.org</a> & developed by Ken MCDU78</p>
