--- a/index.html
+++ b/index.html
@@ -79,6 +79,22 @@
                             </label>
                         </div>
                     </li>
+                    <li class="list-group-item">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="check-box8">
+                            <label class="form-check-label" for="check-box8">
+                                Silom Edge
+                            </label>
+                        </div>
+                    </li>
+                    <li class="list-group-item">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="check-box9">
+                            <label class="form-check-label" for="check-box9">
+                                รัฐศาสตร์
+                            </label>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </div>
