fix column width on phone

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="container">
         <script type="module" src="random.js"></script>
         <div class="row checkbox-row justify-content-center">
-            <div class="col-8 col-sm-4">
+            <div class="col-8 col-xl-4">
                 <ul class="m-1 list-group">
                     <li class="list-group-item">
                         <div class="form-check">
@@ -98,16 +98,26 @@
                 </ul>
             </div>
         </div>
-        <div class="m-1 d-grid gap-2 col-8 col-sm-4 mx-auto">
+        <div class="m-1 d-grid gap-2 col-8 col-xl-4 mx-auto">
             <button class="btn btn-primary" type="button" id="gen-btn">Random!</button>
         </div>
-        <div class="row justify-content-center">
-            <div class="m-1 alert alert-success col-8 col-sm-4 mx-auto" role="alert" id="output">
+        <div class="justify-content-center">
+            <div class="m-1 alert alert-success col-8 col-xl-4 mx-auto" role="alert" id="output">
                 Result
             </div>
-            <p style="color: gray">Powered by <a href="https://random.org">Random.org</a> & developed by Ken MCDU78</p>
+            <!-- <div class="card col-8 col-xl-4 mx-auto">
+                <div class="card-body row">
+                    Number Generator
+                    <input type="number" placeholder="minimum">
+                    <input type="number" placeholder="maximum">
+                    <div class="m-1 d-grid gap-2 col-8 col-xl-4 mx-auto">
+                        <button class="btn btn-primary" type="button" id="gen-btn">Random!</button>
+                    </div>
+                </div> -->
+            </div>
+            <p style="color: gray" class="fixed-bottom">Powered by <a href="https://random.org">Random.org</a> &
+                developed by Ken MCDU78</p>
         </div>
-
     </div>
 </body>
 
