Change spinner style

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 </head>
 
 <body>
-    <div class="top-banner">
-        <h1 style="padding-top: 0.25em">MDCU True Randomness Generator</h1>
-    </div>
+    <nav class="navbar navbar-dark bg-dark mb-2">
+        <a class="navbar-brand ps-3">MDCU True Randomness Generator</a>
+    </nav>
     <div class="container">
         <script type="module" src="random.js"></script>
         <div class="row checkbox-row justify-content-center">
@@ -102,9 +102,8 @@
             <button class="btn btn-primary" type="button" id="gen-btn">Random!</button>
         </div>
         <div class="justify-content-center">
-            <div class="m-1 alert alert-success col-8 col-xl-4 mx-auto" role="alert" id="output">
+            <div class="m-1 fs-3 alert alert-success col-8 col-xl-4 mx-auto" role="alert" id="output">
                 Result
-            </div>
             <!-- <div class="card col-8 col-xl-4 mx-auto">
                 <div class="card-body row">
                     Number Generator
@@ -114,10 +113,10 @@
                         <button class="btn btn-primary" type="button" id="gen-btn">Random!</button>
                     </div>
                 </div> -->
-            </div>
-            <p style="color: gray" class="sticky-bottom">Powered by <a href="https://random.org">Random.org</a> &
-                developed by Ken MCDU78</p>
         </div>
+        <p style="color: gray" class="sticky-bottom">Powered by <a href="https://random.org">Random.org</a> &
+            developed by Ken MCDU78</p>
+    </div>
     </div>
 </body>
 
