Change footer class

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             </div>
         </div>
     </div>
-    <p style="color: gray" class="sticky-bottom">Powered by <a href="https://random.org">Random.org</a> &
+    <p style="color: gray" class="fixed-bottom">Powered by <a href="https://random.org">Random.org</a> &
         developed by Ken MCDU78</p>
 </body>
 
