--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <div class="col-md col-sm">
                 <div class="card">
                     <div class="card-body row">
-                        Number Generator
+                        <p class="h3">Number Generator</p>
                         <div class="input-group mb-3">
                             <input id="num-1" class="form-control" type="number" placeholder="minimum">
                         </div>
@@ -136,7 +136,7 @@
             </div>
         </div>
     </div>
-    <p style="color: gray" class="fixed-bottom">Powered by <a href="https://random.org">Random.org</a> &
+    <p style="color: gray">Powered by <a href="https://random.org">Random.org</a> &
         developed by Ken MCDU78</p>
 </body>
 
