Add time verification

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <head>
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
@@ -23,93 +22,93 @@
         <div class="row">
             <div class="col-md col-sm">
                 <div class="card col mx-auto">
-                <div class="row checkbox-row justify-content-center">
-                    <div class="col">
-                        <ul class="m-1 list-group">
-                            <li class="list-group-item">
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="" id="check-box1">
-                                    <label class="form-check-label" for="check-box1">
-                                        อปร
-                                    </label>
-                                </div>
-                            </li>
-                            <li class="list-group-item">
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="" id="check-box2">
-                                    <label class="form-check-label" for="check-box2">
-                                        สธ
-                                    </label>
-                                </div>
-                            </li>
-                            <li class="list-group-item">
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="" id="check-box3">
-                                    <label class="form-check-label" for="check-box3">
-                                        ภูมิสิริ
-                                    </label>
-                                </div>
-                            </li>
-                            <li class="list-group-item">
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="" id="check-box4">
-                                    <label class="form-check-label" for="check-box4">
-                                        BWELL
-                                    </label>
-                                </div>
-                            </li>
-                            <li class="list-group-item">
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="" id="check-box5">
-                                    <label class="form-check-label" for="check-box5">
-                                        สก
-                                    </label>
-                                </div>
-                            </li>
-                            <li class="list-group-item">
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="" id="check-box6">
-                                    <label class="form-check-label" for="check-box6">
-                                        ใต้หอปรีดาลัย
-                                    </label>
-                                </div>
-                            </li>
-                            <li class="list-group-item">
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="" id="check-box7">
-                                    <label class="form-check-label" for="check-box7">
-                                        Silom Complex
-                                    </label>
-                                </div>
-                            </li>
-                            <li class="list-group-item">
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="" id="check-box8">
-                                    <label class="form-check-label" for="check-box8">
-                                        Silom Edge
-                                    </label>
-                                </div>
-                            </li>
-                            <li class="list-group-item">
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="" id="check-box9">
-                                    <label class="form-check-label" for="check-box9">
-                                        รัฐศาสตร์
-                                    </label>
-                                </div>
-                            </li>
-                        </ul>
+                    <div class="row checkbox-row justify-content-center">
+                        <div class="col">
+                            <ul class="m-1 list-group">
+                                <li class="list-group-item">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="" id="check-box1">
+                                        <label class="form-check-label" for="check-box1">
+                                            อปร
+                                        </label>
+                                    </div>
+                                </li>
+                                <li class="list-group-item">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="" id="check-box2">
+                                        <label class="form-check-label" for="check-box2">
+                                            สธ
+                                        </label>
+                                    </div>
+                                </li>
+                                <li class="list-group-item">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="" id="check-box3">
+                                        <label class="form-check-label" for="check-box3">
+                                            ภูมิสิริ
+                                        </label>
+                                    </div>
+                                </li>
+                                <li class="list-group-item">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="" id="check-box4">
+                                        <label class="form-check-label" for="check-box4">
+                                            BWELL
+                                        </label>
+                                    </div>
+                                </li>
+                                <li class="list-group-item">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="" id="check-box5">
+                                        <label class="form-check-label" for="check-box5">
+                                            สก
+                                        </label>
+                                    </div>
+                                </li>
+                                <li class="list-group-item">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="" id="check-box6">
+                                        <label class="form-check-label" for="check-box6">
+                                            ใต้หอปรีดาลัย
+                                        </label>
+                                    </div>
+                                </li>
+                                <li class="list-group-item">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="" id="check-box7">
+                                        <label class="form-check-label" for="check-box7">
+                                            Silom Complex
+                                        </label>
+                                    </div>
+                                </li>
+                                <li class="list-group-item">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="" id="check-box8">
+                                        <label class="form-check-label" for="check-box8">
+                                            Silom Edge
+                                        </label>
+                                    </div>
+                                </li>
+                                <li class="list-group-item">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="" id="check-box9">
+                                        <label class="form-check-label" for="check-box9">
+                                            รัฐศาสตร์
+                                        </label>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="m-1 d-grid gap-2 col">
+                        <button class="btn btn-primary" type="button" id="gen-btn">Random!</button>
+                    </div>
+                    <div class="justify-content-center">
+                        <div class="m-1 fs-3 alert alert-success col" role="alert" id="output">
+                            Result
+                        </div>
                     </div>
                 </div>
-                <div class="m-1 d-grid gap-2 col">
-                    <button class="btn btn-primary" type="button" id="gen-btn">Random!</button>
-                </div>
-                <div class="justify-content-center">
-                    <div class="m-1 fs-3 alert alert-success col" role="alert" id="output">
-                        Result
-                    </div>
-                </div>
-            </div>
             </div>
             <div class="col-md col-sm">
                 <div class="card">
@@ -122,17 +121,16 @@
                             <input id="num-2" class="form-control" type="number" placeholder="maximum">
                         </div>
                     </div>
-                        <div class="m-1 d-grid gap-2 col">
-                            <button class="btn btn-primary" type="button" id="num-btn">Random!</button>
+                    <div class="m-1 d-grid gap-2 col">
+                        <button class="btn btn-primary" type="button" id="num-btn">Random!</button>
+                    </div>
+                    <div class="justify-content-center">
+                        <div class="m-1 fs-3 alert alert-success col" role="alert" id="output-2">
+                            Result
                         </div>
-                    
-               
-                <div class="justify-content-center">
-                    <div class="m-1 fs-3 alert alert-success col" role="alert" id="output-2">
-                        Result
+                        <span id="time-verify"></span>
                     </div>
                 </div>
-            </div>
             </div>
         </div>
     </div>
